--- a/refresh_token_rotation-main/refresh_token_rotation-main/package.json
+++ b/refresh_token_rotation-main/refresh_token_rotation-main/package.json
@@ -7,25 +7,28 @@
     "start": "node server",
     "dev": "nodemon server"
   },
-  "author": "Dave Gray",
+  "author": "YARED MEKONNEN",
   "license": "ISC",
   "engines": {
     "node": "14.x"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.451.0",
+    "@aws-sdk/s3-request-presigner": "^3.451.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
   }
-  
 }
