--- a/refresh_token_rotation-main/refresh_token_rotation-main/package.json
+++ b/refresh_token_rotation-main/refresh_token_rotation-main/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "sharp": "^0.32.6",
     "uuid": "^8.3.2"
   },
