--- a/react_login_hooks-main/react_login_hooks-main/package.json
+++ b/react_login_hooks-main/react_login_hooks-main/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@paypal/paypal-js": "^7.1.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
