added paypal payment

--- a/refresh_token_rotation-main/refresh_token_rotation-main/package.json
+++ b/refresh_token_rotation-main/refresh_token_rotation-main/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.451.0",
     "@aws-sdk/s3-request-presigner": "^3.454.0",
+    "@paypal/paypal-js": "^7.1.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
